Fix CSS for dark mode

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -44,3 +44,9 @@
     @apply h-full;
   }
 }
+
+@layer utilities {
+  :root {
+    color-scheme: light;
+  }
+}
